--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.3
+  bloc: ^7.2.1
+  flutter_bloc: ^7.3.0
+  equatable: ^2.0.3
+  geolocator: ^7.6.2
+  freezed: ^0.14.2
+  json_serializable: ^4.1.4
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
