--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   freezed: ^0.14.2
   json_serializable: ^4.1.4
   intl: ^0.17.0
+  dependencies:
+  get: ^4.3.8
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
