--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.3.8
   get_it: ^7.2.0
   table_calendar: ^3.0.2
+  sqflite: ^2.0.0+4
 
 dev_dependencies:
   flutter_test:
