--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   get_it: ^7.2.0
   table_calendar: ^3.0.2
   sqflite: ^2.0.0+4
+  cloud_firestore: ^2.5.4
+  firebase_core: ^1.8.0
 
 dev_dependencies:
   flutter_test:
