--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   cloud_firestore: ^2.5.4
   firebase_core: ^1.8.0
   bloc_test: ^8.2.0
-  mocktail: ^0.2.0
+  golden_toolkit: ^0.10.0
 
 dev_dependencies:
   flutter_test:
